Fix union picker issues on mobile.

--- a/app/assets/css/modal.styl
+++ b/app/assets/css/modal.styl
@@ -1,4 +1,7 @@
 
+body.modal-open
+  overflow hidden
+
 #modal-container
   background rgba(0, 0, 0, .9)
   fixed left right bottom top
@@ -60,6 +63,7 @@
 .fraternities
   max-height 350px
   overflow-y scroll
+
   a
     display block
     line-height 40px
