--- a/app/assets/css/responsive.styl
+++ b/app/assets/css/responsive.styl
@@ -1,5 +1,7 @@
 @media (max-width: 480px)
   #modal-container
+    padding 10px
+
     &.active
       .modal
         height 100%
@@ -11,6 +13,7 @@
       max-height 100%
       height 100%
       overflow auto
+      -webkit-overflow-scrolling touch
 
   header
     height auto
